--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-  <title>sjol.github.io/bread</title>
+  <title>sjol.github.io/bread/</title>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <meta name="keywords" content="fotos, photos, pictures, Stefan Jol, stefanjol, contact, kontakt" />
   <meta name="author" content="Stefan Jol" />
