--- a/index.html
+++ b/index.html
@@ -1,414 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <title>sjol.github.io/bread/</title>
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <meta name="keywords" content="fotos, photos, pictures, Stefan Jol, stefanjol, contact, kontakt" />
-  <meta name="author" content="Stefan Jol" />
-  <link rel="manifest" href="/manifest.json">
-  <link rel="apple-touch-icon-precomposed" sizes="192x192" href="/apple-touch-icon-precomposed-192.png">
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-precomposed-144.png">
-  <link rel="apple-touch-icon-precomposed" sizes="64x64" href="/apple-touch-icon-precomposed-64.png">
-  <link rel="icon" sizes="192x192" href="/apple-touch-icon-precomposed-192.png">
-  <link rel="icon" sizes="144x144" href="/apple-touch-icon-precomposed-144.png">
-  <link rel="icon" sizes="64x64" href="/apple-touch-icon-precomposed-64.png">
-  <link rel="shortcut icon" href="/favicon.ico" />
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <!-- Bootstrap Core CSS -->
-  <link href="/scripts/readable-bootstrap.css" rel="stylesheet">
-  <link href="/scripts/readable-custom.min.css" rel="stylesheet">
-
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn not work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-  <![endif]-->
-
-  <!-- jQuery -->
-  <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-
-    <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-29252109-1']);
-    _gaq.push(['_setDomainName', 'stefanjol.nl']);
-    _gaq.push(['_trackPageview']);
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
-  </head>
-
-<body>
-
-  <div id="wrapper">
-
-    <!-- Navigation -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/home">www.stefanjol.nl/Bread</a>
-      </div>
-      <!-- /.navbar-header -->
-      <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="/home">Home</a></li>
-          <li><a href="/venny">Venny</a></li>
-          <li><a href="/bread">Bread</a></li>
-          <li><a href="/contact">Contact</a></li>
-        </ul>
-      </div>
-
-    </div>
-
-    <div class="container" id="container" style="margin-top: 40px;">
-      <div class="row">
-        <div class="col-lg-10 col-md-12 col-sm-12 col-xs-12" id="containerMainDiv">
-
-
-<h1>Making bread - the easy way!</h1>
-<p style="font-style: italic;">Easy recipe suitable for a daily fresh loaf</p>
-<p>Translate here: <div id="google_translate_element"></div><script type="text/javascript">
-function googleTranslateElementInit() {
-  new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'el'}, 'google_translate_element');
-}
-</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script><p>
-<p style="font-size:85%; font-weight: bold;">Update 2017-06: No need to add sugar, vinegar or oil, so
-  these are now removed!</p>
-
-<p>
-  <img src="/images/21-DSC00010.JPG" style="width: 100%;"><br>
-</p>
-
-<p><b>This is really easy - I make this bread every day</b> (unless I wake up late, because you need
-one hour in the morning if you do the rising overnight)</p>
-
-<p>Here is the original no-knead bread recipe that became very popular:
-  <a href="http://cooking.nytimes.com/recipes/11376-no-knead-bread">http://cooking.nytimes.com/recipes/11376-no-knead-bread</a>
-</p>
-
-<p>I follow that recipe roughly, although I don't use a real "dutch oven"
-  but instead a backing tray or roasting pot with a lid (see picture below).
-  Also I immediately throw the dough in a shape and put the whole thing in
-  a cold oven.</p>
-
-<p>Here is what I do:</p>
-<ol>
-  <li>In a bowl, mix <b>3 cups of flour (460 g)</b> and <b>a teaspoon of salt (4 g)</b> and make
-    a little bowl in the middle of the flour</li>
-  <li>Pour <b>1.5 cups of water (340 g)</b> in the bowl of the flour and add
-    <b>0.5 teaspoons of yeast (2 g)</b> (the dried one, can also be 1 teaspoon
-    depending on how fast you'll find it rises, start with 0.5)
-    and let it sit for about 15 minutes to dissolve the yeast. You can also add
-    just 1 cup of water for a more sturdy dough that becomes less flat when baking,
-    but then you will need to knead the dough with your hands.
-    (you can also skip the waiting, but then the holes in your
-    bread become bigger if your yeast is really coarse, whatever you prefer)</li>
-  <li>Mix the yeast, water &amp; flour mixture</li>
-  <li>Cover with a a plate (or cellophane) for about 10 hours until it has risen
-    a lot in volume (a few hours more or less do not matter, it
-    mostly matters whether it got significantly more volume)</li>
-  <li>Prepare a deep backing tray or roasting pot that has a lid
-    with a bit of oil or parchment paper. Drop in the dough and
-    cover with aluminium foil (in case of the backing tray) or put the lid
-    on (in the case of the roasting pot). The cover/lid is to create a moist
-    environment inside which allows the ouside of the bread to stay flexible
-    so that later it can form a nice crust.</li>
-  <li>Place immediately in the cold oven, turn it on 200 degrees C.</li>
-  <li>After 35 minutes, take off the aluminium foil or lid and bake
-    for another 20 minutes.</li>
-  <li>Done! take it out of the form and let it cool</li>
-</ol>
-
-<p>I often prepare the dough before going to bed. I warm up the oven
-  slightly (lowest setting is 50 degrees C), then turn it off and put
-  the dough mixture inside until the next morning. In this warm environment
-  it will rise nicely, which helps when your kitchen is cold (like in
-  England).</p>
-
-<p>It sounds like a lot of work, but when you have done it once
-  it's quite easy. Check out the following table with the step and how
-  little time it takes.<p>
-
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <td></td>
-      <td>step</td>
-      <td>active time</td>
-      <td>waiting time</td>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>1</td>
-      <td>Mixing flower and salt</td>
-      <td>2 minutes</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>Adding water</td>
-      <td>1 minute</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>Letting yeast dissolve</td>
-      <td>5 minutes</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>4</td>
-      <td>Stirring and mixing</td>
-      <td>4 minutes</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>5</td>
-      <td>Put away</td>
-      <td>1 minute</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>6</td>
-      <td>Overnight fermentation</td>
-      <td></td>
-      <td>~8 hours</td>
-    </tr>
-    <tr>
-      <td>7</td>
-      <td>Prepare pot with parchment paper</td>
-      <td>2 minutes</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>8</td>
-      <td>Transfer dough to pot and put in oven</td>
-      <td>1 minute</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>9</td>
-      <td>Bake</td>
-      <td></td>
-      <td>35 minutes</td>
-    </tr>
-    <tr>
-      <td>10</td>
-      <td>Take off lid</td>
-      <td>1 minute</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>11</td>
-      <td>Bake</td>
-      <td></td>
-      <td>20 minutes</td>
-    </tr>
-    <tr>
-      <td></td>
-      <td><b>Total</b></td>
-      <td><b>17 minutes</b></td>
-      <td><b>~9 hours</b></td>
-    </tr>
-  </tbody>
-</table>
-
-<h2>Step-by-step images</h2>
-<a href="#" class="photoswipe"><img src="/images/bread/01-DSC09987.JPG" style="width: 29%; margin: 1%;" title="Add 3 cups of flower in the bowl"></a>
-<a href="#" class="photoswipe"><img src="/images/bread/02-DSC09988.JPG" style="width: 29%; margin: 1%;" title="Add a teaspoon of salt"></a>
-<a href="#" class="photoswipe"><img src="/images/bread/03-DSC09989.JPG" style="width: 29%; margin: 1%;" title="Make a bowl in the flower-salt mixture"></a>
-<a href="#" class="photoswipe"><img src="/images/bread/04-DSC09990.JPG" style="width: 29%; margin: 1%;" title="Pour 1.5 cups of water in the bowl"></a>
-<a href="#" class="photoswipe"><img src="/images/bread/06-DSC09992.JPG" style="width: 29%; margin: 1%;" title="Add 1/2 a teaspoon of dried yeast"></a>
-<a href="#" class="photoswipe"><img src="/images/bread/07-DSC09993.JPG" style="width: 29%; margin: 1%;" title="Let it for a few minutes until the yeast sank in and dissolved"></a>
-<a href="#" class="photoswipe"><img src="/images/bread/08-DSC09994.JPG" style="width: 29%; margin: 1%;" title="Set your oven to about 50 degrees C"></a>
-<a href="#" class="photoswipe"><img src="/images/bread/11-DSC09998.JPG" style="width: 29%; margin: 1%;" title="Stir starting first in the center"></a>
-<a href="#" class="photoswipe"><img src="/images/bread/12-DSC00001.JPG" style="width: 29%; margin: 1%;" title="Stir the dough ball with a bit of force"></a>
-<a href="#" class="photoswipe"><img src="/images/bread/13-DSC00002.JPG" style="width: 29%; margin: 1%;" title="Wrap you bowl with foil (or cover with a plate) and put it in the oven. Turn off the oven, the 50 degrees are just to give the yeast a nice warm start."></a>
-<a href="#" class="photoswipe"><img src="/images/bread/14-DSC00004.JPG" style="width: 29%; margin: 1%;" title="The next day, prepare a pot with some parchment paper"></a>
-<a href="#" class="photoswipe"><img src="/images/bread/15-DSC00005.JPG" style="width: 29%; margin: 1%;" title="Your dough should have risen a lot"></a>
-<a href="#" class="photoswipe"><img src="/images/bread/16-DSC00006.JPG" style="width: 29%; margin: 1%;" title="Scrape the dough in the pot on the parchment paper (no photo because I needed two hands)"></a>
-<a href="#" class="photoswipe"><img src="/images/bread/17-DSC00008.JPG" style="width: 29%; margin: 1%;" title="Set the oven to 200 degrees C and put in the the pot with the lid on. After 35 minutes, take off the lid and bake for another 20 minutes."></a>
-<a href="#" class="photoswipe"><img src="/images/bread/18-DSC00009.JPG" style="width: 29%; margin: 1%;" title="Take out your bread if it looks like this"></a>
-<a href="#" class="photoswipe"><img src="/images/bread/19-DSC00010.JPG" style="width: 29%; margin: 1%;" title="Make sure not to leave it in the pot to cool down, but give it some space to breath"></a>
-
-
-<!-- Root element of PhotoSwipe. Must have class pswp. -->
-<div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
-
-  <!-- Background of PhotoSwipe.
-It's a separate element as animating opacity is faster than rgba(). -->
-  <div class="pswp__bg"></div>
-
-  <!-- Slides wrapper with overflow:hidden. -->
-  <div class="pswp__scroll-wrap">
-
-    <!-- Container that holds slides.
-PhotoSwipe keeps only 3 of them in the DOM to save memory.
-Don't modify these 3 pswp__item elements, data is added later on. -->
-    <div class="pswp__container">
-      <div class="pswp__item"></div>
-      <div class="pswp__item"></div>
-      <div class="pswp__item"></div>
-    </div>
-    <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
-    <div class="pswp__ui pswp__ui--hidden">
-
-      <div class="pswp__top-bar">
-
-        <!--  Controls are self-explanatory. Order can be changed. -->
-
-        <div class="pswp__counter"></div>
-
-        <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
-
-        <button class="pswp__button pswp__button--share" title="Share"></button>
-
-        <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
-
-        <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
-
-        <!-- Preloader demo http://codepen.io/dimsemenov/pen/yyBWoR -->
-        <!-- element will get class pswp__preloader--active when preloader is running -->
-        <div class="pswp__preloader">
-          <div class="pswp__preloader__icn">
-            <div class="pswp__preloader__cut">
-              <div class="pswp__preloader__donut"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
-        <div class="pswp__share-tooltip"></div>
-      </div>
-
-      <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
-      </button>
-
-      <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
-      </button>
-
-      <div class="pswp__caption">
-        <div class="pswp__caption__center"></div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<!-- Core CSS file -->
-<link rel="stylesheet" href="/bower_components/photoswipe/dist/photoswipe.css">
-
-<!-- Skin CSS file (styling of UI - buttons, caption, etc.)
-In the folder of skin CSS file there are also:
-- .png and .svg icons sprite,
-- preloader.gif (for browsers that do not support CSS animations) -->
-<link rel="stylesheet" href="/bower_components/photoswipe/dist/default-skin/default-skin.css">
-
-<!-- Core JS file -->
-<script src="/bower_components/photoswipe/dist/photoswipe.min.js"></script>
-
-<!-- UI JS file -->
-<script src="/bower_components/photoswipe/dist/photoswipe-ui-default.min.js"></script>
-
-<script type="text/javascript">
-  var pswpElement = document.querySelectorAll('.pswp')[0];
-
-  function initializeGallery(i) {
-    // build items array
-    var items = [];
-    $('a.photoswipe').each(function() {
-      items.push({
-        src: $(this).children('img').attr('src'),
-        msrc: $(this).children('img').attr('src'),
-        w: 1024,
-        h: 1024,
-        title: $(this).children('img').attr('title')
-      });
-    });
-
-
-    // define options (if needed)
-    var options = {
-      // optionName: 'option value'
-      // for example:
-      index: i, // start at first slide
-      shareEl: false,
-      loop: false,
-      isClickableElement: function(el) {
-        if (el.tagName === 'A')
-          return true;
-        else if (el.tagName === 'I') //el.className == 'video_button')
-          return true;
-        else
-          return false;
-      },
-      getThumbBoundsFn: function(index) {
-
-        // find thumbnail element
-        var thumbnail = $("a.photoswipe img")[index];
-
-        // get window scroll Y
-        var pageYScroll = window.pageYOffset || document.documentElement.scrollTop;
-        // optionally get horizontal scroll
-
-        // get position of element relative to viewport
-        var rect = thumbnail.getBoundingClientRect();
-
-        // w = width
-        return {x:rect.left, y:rect.top + pageYScroll, w:rect.width};
-      }
-
-    };
-
-    // Initializes and opens PhotoSwipe
-    gallery = new PhotoSwipe( pswpElement, PhotoSwipeUI_Default, items, options);
-    gallery.init();
-  }
-
-  $('a.photoswipe').click(function(event) {
-    event.preventDefault();
-    initializeGallery($('a.photoswipe').index(this));
-  });
-</script>
-                </div>
-                <!-- /outer grid -->
-            </div>
-            <!-- /.row -->        </div>
-        <!-- /#page-wrapper -->
-
-    </div>
-    <!-- /#wrapper -->
-
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#searchTxt').keyup(function(event) {
-          var code = event.charCode || event.keyCode;
-          if (code == 27)
-            $('#searchTxt')[0].value = '';
-          searchPage();
-        });
-      });
-    </script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/scripts/readable-custom.js"></script>
-</body>
-</html>
+Test
